--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title>Spotify NG2 Test</title>
@@ -15,7 +14,10 @@
   <script src="https://unpkg.com/@angular/platform-browser-dynamic@2.0.0/bundles/platform-browser-dynamic.umd.js"></script>
 </head>
 <body>
-  <script src="app.component.js"></script>
-  <script src="app.module.js"></script>
+  <my-app></my-app>
+  <script src="app/spotifyiframeplayer.component.js"></script>
+  <script src="app/app.component.js"></script>
+  <script src="app/app.module.js"></script>
+  <script src="app/main.js"></script>
 </body>
 </html>
